--- a/LibrarySystem/LibrarySystem/LibrarySystem.csproj
+++ b/LibrarySystem/LibrarySystem/LibrarySystem.csproj
@@ -7,4 +7,20 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="NotificationDialogs\Presentation\check.png" />
+    <None Remove="NotificationDialogs\Presentation\error.png" />
+    <None Remove="NotificationDialogs\Presentation\warning.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="NotificationDialogs\Presentation\check.png" />
+    <Resource Include="NotificationDialogs\Presentation\error.png" />
+    <Resource Include="NotificationDialogs\Presentation\warning.png" />
+  </ItemGroup>
+
 </Project>
