--- a/LibrarySystem/LibrarySystem/LibrarySystem.csproj
+++ b/LibrarySystem/LibrarySystem/LibrarySystem.csproj
@@ -24,4 +24,8 @@
     <Resource Include="NotificationDialogs\Presentation\warning.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MainUI\Commands\" />
+  </ItemGroup>
+
 </Project>
